// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generic Resources Correctly Resolves Create Resources Mutation 1`] = `
Object {
  "data": Object {
    "createResources": Object {
      "errors": Array [
        Object {
          "message": "Cannot find resource type \\"mcm.ibm.com/v1alpha1\\"",
        },
      ],
    },
  },
}
`;

exports[`Generic Resources Correctly Resolves Get Resource Locally 1`] = `
Object {
  "data": Object {
    "getResource": Object {
      "apiVersion": "v1",
      "code": 404,
      "details": Object {
        "kind": "pods",
        "name": "monitoring-prometheus-nodeexporter-n6h9b",
      },
      "kind": "Status",
      "message": "pods \\"monitoring-prometheus-nodeexporter-n6h9b\\" not found",
      "metadata": Object {},
      "reason": "NotFound",
      "status": "Failure",
    },
  },
}
`;

exports[`Generic Resources Correctly Resolves Update Cluster Labels 1`] = `
Object {
  "data": Object {
    "updateResourceLabels": "404 page not found
",
  },
}
`;

exports[`Generic Resources Correctly Resolves Update Local Resource 1`] = `
Object {
  "data": Object {
    "updateResource": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "INTERNAL_SERVER_ERROR",
        "exception": Object {
          "stacktrace": Array [
            "Error: 409 - Operation cannot be fulfilled on namespaces \\"klusterlet\\": StorageError: invalid object, Code: 4, Key: /kubernetes.io/namespaces/klusterlet, ResourceVersion: 0, AdditionalErrorMsg: Precondition failed: UID in precondition: 34ddc94d-70dc-11e9-865a-00000a15079c, UID in object meta: ",
            "    at GenericModel.updateResource (/Users/fxiang/workspaces/console-api/src/v2/models/generic.js:393:15)",
            "    at processTicksAndRejections (internal/process/task_queues.js:97:5)",
          ],
        },
      },
      "locations": Array [
        Object {
          "column": 11,
          "line": 3,
        },
      ],
      "message": "409 - Operation cannot be fulfilled on namespaces \\"klusterlet\\": StorageError: invalid object, Code: 4, Key: /kubernetes.io/namespaces/klusterlet, ResourceVersion: 0, AdditionalErrorMsg: Precondition failed: UID in precondition: 34ddc94d-70dc-11e9-865a-00000a15079c, UID in object meta: ",
      "path": Array [
        "updateResource",
      ],
    },
  ],
}
`;

exports[`Generic Resources Correctly Resolves Update Remote Resource 1`] = `
Object {
  "data": Object {
    "updateResource": Array [
      Object {
        "code": 404,
        "message": "namespaces \\"layne-remote\\" not found",
      },
    ],
  },
}
`;

exports[`Generic Resources Correctly Resolves update Compliance Mutation 1`] = `
Object {
  "data": Object {
    "updateResource": "404 page not found
",
  },
}
`;

exports[`Generic Resources Should Report Error While Create Resources Mutation 1`] = `
Object {
  "data": Object {
    "createResources": Object {
      "errors": Array [
        Object {
          "message": "Cannot find resource type \\"mcm.ibm.com/v1alpha1\\"",
        },
      ],
    },
  },
}
`;
